@@ -3,7 +3,7 @@ use strict;
 use warnings FATAL => 'all';
 
 use Exporter 5.57 'import';
-our @EXPORT = qw/make_executable split_like_shell/;
+our @EXPORT = qw/make_executable split_like_shell detildefy/;
 
 use Carp qw/croak/;
 use Config;
@@ -38,6 +38,16 @@ sub split_like_shell {
   return shellwords($string);
 }
 
+sub detildefy {
+	my $value = shift;
+	# tilde with optional username
+	for ($value) {
+		s{ ^ ~ (?= /|$)}          [ $ENV{HOME} || (getpwuid $>)[7] ]ex or # tilde without user name
+		s{ ^ ~ ([^/]+) (?= /|$) } { (getpwnam $1)[7] || "~$1" }ex;        # tilde with user name
+	}
+	return $value;
+}
+
 1;
 
 # ABSTRACT: Unix specific helper bits
@@ -48,6 +58,7 @@ __END__
 
 make_executable
 split_like_shell
+detildefy
 
 =end Pod::Coverage
 
