@@ -3,7 +3,7 @@ use strict;
 use warnings FATAL => 'all';
 
 use Exporter 5.57 'import';
-our @EXPORT = qw/make_executable split_like_shell/;
+our @EXPORT = qw/make_executable split_like_shell detildefy/;
 
 use Config;
 
@@ -158,6 +158,12 @@ sub split_like_shell {
 	return @argv;
 }
 
+sub detildefy {
+	my $value = shift;
+	$value =~ s{ ^ ~ (?= [/\\] | $ ) }[$ENV{USERPROFILE}]x if $ENV{USERPROFILE};
+	return $value;
+}
+
 1;
 
 # ABSTRACT: Windows specific helper bits
@@ -166,6 +172,7 @@ sub split_like_shell {
 
 make_executable
 split_like_shell
+detildefy
 
 =end Pod::Coverage
 
