@@ -4,6 +4,7 @@ Revision history for ExtUtils-Helpers
           Made man3_pagename more flexible with paths
           Reverted pl2bat to a more original state
           Rewrote fixin code
+          Re-added detildefy
 
 0.014     2012-02-22 21:42:35 Europe/Amsterdam
           Remove detildefication, defer to File::HomeDir to do it better
